--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "mern",
   "version": "1.0.0",
   "description": "Mern, JWT Authentication, mongoDB, Express",
+  "engines": {
+    "node": "16.x"
+  },
   "main": "server.js",
   "scripts": {
     "start": "node backend/server.js",
